2010-12-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/products.R: dimension fixing in some Matrix o vector  [t]crossprod()s.

	* src/Csparse.c (nz2Csparse, nz_pattern_to_Csparse): new utilities,
	callable from C and R.
	(Csparse_dense_prod): check pattern matrix and coerce to "d..".
	* tests/Simple.R: testing  <n.Matrix> %*% <dense>

	* R/ngCMatrix.R, R/nsCMatrix.R, .. : use the new fast coercions.

2010-10-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-45, CRAN-released: 2010-11-10

	* R/sparseMatrix.R (graph.wgtMatrix): add 'graph::' in a few
	places; as 'graph' package is not imported and may well be loaded
	only.

2010-09-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (setAs): graph |-> Matrix: via CsparseMatrix

2010-08-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (sparse.model.matrix): argument 'drop.unused.levels = FALSE'
	NB: was *true* implicitly, before.  Compatibility with model.matrix().

	* R/sparseMatrix.R (formatSpMatrix, formatSparseM): factored out of
	printSpMatrix(); export as potentially useful for standard
	matrices, even.

2010-08-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/eigen.R (Schur): correct setMethod() such that
	Schur(<dgCMatrix>) works.

2010-08-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R, man/bdiag.Rd, NAMESPACE: export .bdiag() as well.

2010-08-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-44, CRAN-released: 2010-09-11

	* R/diagMatrix.R (diagCspprod, Cspdiagprod): drop (possibly wrong) @factors
	* R/Ops.R (.Arith.CM.atom, .Arith.atom.CM, A.M.n, A.n.M): ditto

	* tests/factorizing.R: check some of the above.


2010-08-04  Douglas Bates  <bates@stat.wisc.edu>

	* R/spModels.R (fac2sparse): Fix name resolution problem
	(R-SIG-Mixed-Models post by Florent Duyme).

2010-07-25  Martin Maechler  <maechler@stat.math.ethz.ch>
